# cx-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  graph.py  jobs.py  llm.py  main.py  models.py
app/agents/: drafter.py  guardrails.py  intake.py  qa_eval.py  router.py  triage.py
app/knowledge/: rag.py
app/static/: index.html
data/: knowledge_base.json  tickets.json
